# robot_movil_maestria

./: README.md
src/controlador_movil/scripts/: controlador_robot.py
src/mmdt_ros2/: CMakeLists.txt  package.xml
src/mmdt_ros2/config/: localization_params.yaml  ros2_controllers_mmdt_pos.yaml  xbox_teleop.yaml
src/mmdt_ros2/config/otros/: ros2_controllers_manipulador_der.yaml  ros2_controllers_manipulador_der_pos.yaml  ros2_controllers_movil.yaml  ros2_controllers_torso.yaml  ros2_controllers_torso_pos.yaml
src/mmdt_ros2/description/: camera.xacro  gps.xacro  imu.xacro  lidar.xacro  movil.xacro  robot.urdf.xacro  ros2_control_vels.xacro
src/mmdt_ros2/include/: localization_setvels.h  localization_utils.h
src/mmdt_ros2/launch/: launchMMDT.launch.py  launch_mmdtBasico.launch.py  teleop_launch.py
src/mmdt_ros2/src/: localization_setvels.cpp  localization_utils.cpp
src/mmdt_ros2/src/plugins/: ghost_teleport.cpp  localization_node.cpp
src/mmdt_ros2/worlds/: empty.world  obstaclesModified.world
